Generate a unique ID for file names

Based on a review submitted by Dan Vratil.

BUG: 327623
FIXED-IN: 4.14.1